# wasm_rust_poc

./: __test1__.js  __test2__.js  __test__.js  index.html  index.js  index__.html  index___.html  package-lock.json
hello/: Cargo.toml
hello/pkg/: hello.js  hello_bg.d.ts  hello_bg.js  hello_bg.wasm  hello_bg.wasm.d.ts  package.json
hello/src/: lib.rs
